<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.betriebssysteme</groupId>
    <artifactId>Produktionslinie</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.almasb</groupId>
            <artifactId>fxgl</artifactId>
            <version>21.1</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.24</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <name>Produktionslinie</name>
                    <appVersion>1.0</appVersion>
                    <vendor>Betriebssysteme</vendor>
                    <mainClass>org.betriebssysteme.view.ProductionLineApp</mainClass>
                    <type>exe</type>
                    <icon>src/main/resources/icon.ico</icon>
                    <javaOptions>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--sun-misc-unsafe-memory-access=allow</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
                    </javaOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
